--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -22,10 +22,11 @@
 <!-- if the dashboard only has the battery level and the radio distance, i would rename this tab to "status". I can translate dashboard only to "control center" to hungarian, but having 2 meters to read and nothing to set in not a _control_ center :) -->
     <string name="dashboard">Irányítópult</string>
     <string name="battery_info">Elem töltöttsége</string>
+    <string name="rssi_info">Jelerősség</string>
 <!-- needs confirmation, is this text only used for removing TAGS? because name is only "remove" and not "remove_device" but if i only translate the word remove, it would be ambiguous as this text is appearing in the options menu, even under the Events History if it says only remove the user dont understant what to remove -->
     <string name="remove">Eszköz eltávolítása</string>
     <string name="start_immediate_alert">Csippantás</string>
-    <string name="immediate_alert_summary">Az eszközt meg tudod csipogtatni a kapcsolat kipróbálásához.</string>
+    <string name="immediate_alert_summary">Az eszközt a kapcsolat kipróbálásához meg tudod csipogtatni.</string>
     <string name="stop_immediate_alert">Csippanás állj</string>
     <string name="simple_button_action">Klikkelés</string>
     <string name="simple_button_action_summary">Ha az eszközön egyszer megnyomod a gombot, mi történjen?</string>
@@ -51,9 +52,15 @@
 <!-- TODO -->
         <item>broadcast an intent</item>
     </string-array>
-<!-- needs context, where is this option appear? -->
+    <string name="ring_tone">Csengőhang</string>
+    <string name="ring_tone_summary">Az eseményhez választhatsz csengőhangot.</string>
+<!-- TODO -->
+    <string name="custom_action">custom action</string>
+<!-- TODO -->
+    <string name="custom_action_summary">http(s)://.. or intent action string</string>
+<!-- needs context, where does this option appear? -->
     <string name="stop_ring">Csörgés állj</string>
-<!-- needs context, where is this option appear? -->
+<!-- needs context, where does this option appear? -->
     <string name="stop_vibrate">Vibra állj</string>
     <string name="events_history">Előzmények</string>
 <!-- these are new, previously not existed texts for the events, as they should be translated too. NOT ALL events are here -->
@@ -69,6 +76,7 @@
 <!-- needs screenshot and the context, how is the data exported, is it saved in a file or shared to other apps like email or gdrive? -->
     <string name="export_events">Előzmények mentése</string>
     <string-array name="empty_array"/>
+
 
     <string name="welcome_text">Üdvözöl az iTracing2 !\n
         \n
@@ -89,15 +97,10 @@
     <string name="out_of_range_action_summary">triggered when disconnection occurs</string>
     <string name="action_on_power_off">link is lost on power off</string>
     <string name="action_on_power_off_summary">the link is lost if keyring or bluetooth is powering off</string>
-    <string name="ring_tone">ring tone</string>
-    <string name="ring_tone_summary">select the ringtone for actions</string>
     <string name="ring_tone_not_found">ring tone not found! please select an another, be sure you have a default ring tone, or that sound volume is up.</string>
     <string name="vibrator_not_found">vibrator not found! please be sure that you have this feature on your phone.</string>
-    <string name="rssi_info">rssi info</string>
     <string name="actions">keyring actions</string>
     <string name="something_goes_wrong">something goes wrong!</string>
-    <string name="custom_action">custom action</string>
-    <string name="custom_action_summary">http(s)://.. or intent action string</string>
     <string name="confirm_remove_keyring">Confirm to remove this keyring</string>
     <string name="confirm_change_name">Confirm to change the keyring name</string>
     <string name="link_loss_disabled">disable this feature may occurs ringing your key ring</string>
