--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -6,6 +6,9 @@
 <!-- needs screenshot, where is this setting? -->
     <string name="link_background">Folyamatos kapcsolat</string>
     <string name="link_background_summary">Háttérben kapcsolattartás az eszközzel, mely szükséges egyes tevékenységekhez.</string>
+    <string name="action_foreground">Futtatás szolgáltatásként</string>
+    <string name="action_foreground_summary">Az előtérben indítás segít, hogy a rendszer ne ürítse a memóriából amikor más alkalmazást indítasz.</string>
+    <string name="foreground_started">started in foreground mode</string>
     <string name="double_button_delay">Duplaklikk ideje</string>
     <string name="double_button_delay_summary">Hány ezredmásodpercen belül kell kétszer megnyomni a gombot? Alapértelmezetten 300 ezredmp.</string>
     <string name="default_double_button_delay">300</string>
@@ -19,15 +22,27 @@
     <string name="select_device">Válassz eszközt</string>
 <!-- needs screenshot, what is the context? -->
     <string name="action_connect">Kapcsolódás</string>
+<!-- needs screenshot and the context, what is the text on the buttons, ok, cancel, remove? -->
+    <string name="confirm_change_name">Biztos, hogy átnevezed az eszközt?</string>
+<!-- ??? i tried this option in the app too, but didnt understand what does this do? -->
+    <string name="link_loss_disabled">disable this feature may occurs ringing your key ring</string>
 <!-- if the dashboard only has the battery level and the radio distance, i would rename this tab to "status". I can translate dashboard only to "control center" to hungarian, but having 2 meters to read and nothing to set in not a _control_ center :) -->
     <string name="dashboard">Irányítópult</string>
     <string name="battery_info">Elem töltöttsége</string>
     <string name="rssi_info">Jelerősség</string>
 <!-- needs confirmation, is this text only used for removing TAGS? because name is only "remove" and not "remove_device" but if i only translate the word remove, it would be ambiguous as this text is appearing in the options menu, even under the Events History if it says only remove the user dont understant what to remove -->
     <string name="remove">Eszköz eltávolítása</string>
+<!-- needs screenshot and the context, what is the text on the buttons, ok, cancel, remove? -->
+    <string name="confirm_remove_keyring">Biztos, hogy el akarod távolítani az eszközt?</string>
     <string name="start_immediate_alert">Csippantás</string>
     <string name="immediate_alert_summary">Az eszközt a kapcsolat kipróbálásához meg tudod csipogtatni.</string>
     <string name="stop_immediate_alert">Csippanás állj</string>
+<!-- needs context, where does this option appear? -->
+    <string name="ring_the_device">Csippantás</string>
+<!-- needs context, where does this option appear? -->
+    <string name="actions">Események</string>
+<!-- needs screenshot for context -->
+    <string name="something_goes_wrong">Valami hiba történt :(</string>
     <string name="simple_button_action">Klikkelés</string>
     <string name="simple_button_action_summary">Ha az eszközön egyszer megnyomod a gombot, mi történjen?</string>
     <string name="double_button_action">Duplaklikkelés</string>
@@ -91,7 +106,7 @@
         Egyes tevékenységek csak a folyamatos kapcsolat engedélyezése esetén elérhetőek, mint például a gombnyomás és
         az elhagyás-ellenőrzés.\n
         \n
-        Az alkalmazást szabadidőmben fejlesztem, forráskódja nyitott, adományokat szívesen fogadok. Köszönöm!</string>
+        Az alkalmazást szabadidőmben fejlesztem, forráskódja nyitott, adományokat szívesen fogadok :) Köszönöm!</string>
     <string name="display_last_position">display the last recorded position</string>
     <string name="out_of_range_action">out of range action</string>
     <string name="out_of_range_action_summary">triggered when disconnection occurs</string>
@@ -99,15 +114,6 @@
     <string name="action_on_power_off_summary">the link is lost if keyring or bluetooth is powering off</string>
     <string name="ring_tone_not_found">ring tone not found! please select an another, be sure you have a default ring tone, or that sound volume is up.</string>
     <string name="vibrator_not_found">vibrator not found! please be sure that you have this feature on your phone.</string>
-    <string name="actions">keyring actions</string>
-    <string name="something_goes_wrong">something goes wrong!</string>
-    <string name="confirm_remove_keyring">Confirm to remove this keyring</string>
-    <string name="confirm_change_name">Confirm to change the keyring name</string>
-    <string name="link_loss_disabled">disable this feature may occurs ringing your key ring</string>
-    <string name="foreground_started">started in foreground mode</string>
-    <string name="action_foreground_summary">improves the link between the smartphone and the devices</string>
-    <string name="action_foreground">foreground mode</string>
-    <string name="ring_the_device">ring the keyring</string>
     <string name="connected_action">on connected action</string>
     <string name="connected_action_summary">triggered when connection occurs</string>
 </resources>
