--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -44,24 +44,16 @@
     <string name="actions">Események</string>
 <!-- needs screenshot for context -->
     <string name="something_goes_wrong">Valami hiba történt :(</string>
-<!-- TODO -->
-    <string name="connected_action">on connected action</string>
-<!-- TODO -->
-    <string name="connected_action_summary">triggered when connection occurs</string>
-<!-- TODO -->
-    <string name="out_of_range_action">out of range action</string>
-<!-- TODO -->
-    <string name="out_of_range_action_summary">triggered when disconnection occurs</string>
-<!-- TODO -->
-    <string name="action_on_power_off">link is lost on power off</string>
-<!-- TODO -->
-    <string name="action_on_power_off_summary">the link is lost if keyring or bluetooth is powering off</string>
-<!-- TODO -->
-    <string name="simple_button_action">Klikkelés</string>
+    <string name="connected_action">Kapcsolódás esetén</string>
+    <string name="connected_action_summary">Ha az eszköz kapcsolódik, mi történjen?</string>
+    <string name="out_of_range_action">Szétkapcsolódás esetén</string>
+    <string name="out_of_range_action_summary">Ha az eszköz távol kerül vagy rádiójelét árnyékolják?</string>
+    <string name="action_on_power_off">Lekapcsolás esetén</string>
+    <string name="action_on_power_off_summary">Ha az okoskészülék vagy az eszköz bluetooth lekapcsolódik?</string>
+    <string name="simple_button_action">Klikkelés esetén</string>
     <string name="simple_button_action_summary">Ha az eszközön egyszer megnyomod a gombot, mi történjen?</string>
-<!-- TODO -->
-    <string name="double_button_action">Duplaklikkelés</string>
-    <string name="double_button_action_summary">Ha az eszközön kétszer egymás után megnyomod a gombot, mi történjen?</string>
+    <string name="double_button_action">Duplaklikkelés esetén</string>
+    <string name="double_button_action_summary">Ha az eszközön kétszer egymás után megnyomod a gombot?</string>
     <string-array name="button_actions_values">
         <item>START_RING_PHONE</item>
         <item>START_VIBRATE_PHONE</item>
